--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,8 +5,8 @@
 <%- include('./partials/navbar.ejs')%>
 
     <section id="hero" class="">
-        <!-- <div  class="h-screen pl-[8vw] bg-[url('<%= hero.bg_img_div.url %>')] bg-cover bg-[top_0_right_30%] sm:bg-[top_0_right_0] shadow-lg"> -->
-        <div class="home-hero">
+        <div  class="h-screen pl-[8vw] bg-[url('<%= hero.bg_img_div.url %>')] bg-cover bg-[top_0_right_30%] sm:bg-[top_0_right_0] shadow-lg">
+        <!-- <div class="home-hero"> -->
             <div class="pt-[28vh] sm:pt-[34vh] leading-extra-loose font-medium font-serif">
                 <p class="text-base  sm:text-lg text-orange-700"><%= hero.text_div.first %></p>
                 <h2 class="text-2xl sm:text-5xl"><%= hero.text_div.second %></h2>
@@ -14,7 +14,7 @@
                 <span class="text-sm text-slate-700"><%= hero.text_div.fourth %></span>
             </div>
             <div>
-                <button href="shop.html" class="bg-[url('/button.png')] bg-center bg-cover font-semibold w-[120px] h-14 block">Shop Now</button>
+                <button href="ecommerce/shop" class="bg-[url('/button.png')] bg-center bg-cover font-semibold w-[120px] h-14 block">Shop Now</button>
             </div>
         </div>
     </section>
